--- a/combinedRunner/frontend/src/index.css
+++ b/combinedRunner/frontend/src/index.css
@@ -18,6 +18,8 @@ code {
 }
 
 .para {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Josefin Sans", sans-serif;
+  text-align: left;
+  padding-left: 100px;
   font-size: 35px;
 }
